// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handles duplicate insert via internal PostGraphile savepoint > duplicateInsert 1`] = `
{
  "data": {
    "createUser": null,
  },
  "errors": [
    {
      "extensions": {},
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "duplicate key value violates unique constraint "users_username_key"",
      "path": [
        "createUser",
      ],
    },
  ],
}
`;

exports[`handles duplicate insert via internal PostGraphile savepoint > firstInsert 1`] = `
{
  "data": {
    "createUser": {
      "user": {
        "id": "[ID]",
        "username": "dupeuser",
      },
    },
  },
}
`;

exports[`handles duplicate insert via internal PostGraphile savepoint > queryAfterDuplicateInsert 1`] = `
{
  "data": {
    "allUsers": null,
  },
  "errors": [
    {
      "extensions": {},
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "current transaction is aborted, commands ignored until end of transaction block",
      "path": [
        "allUsers",
      ],
    },
  ],
}
`;
